@@ -2,46 +2,18 @@
 ##  General TODO
 ################################################################################
 
-* UPS Changed the way that it displays fuel surcharge rates.
+    * Build a test that will state with modules are missing at the beginning, 
+      then the rest of the tests can be quiet.
 
-Fuel Surcharge
-Current Fuel Surcharge Rate:
-
-Ground
-Through January 2, 2005: 0.00%.
-Effective January 3, 2005: 2.00%.
-
-Air and International
-Through January 2, 2005: 13.00%.
-Effective January 3, 2005: 9.50%.
-
-* Build a test that will state with modules are missing.
-
-* UPS has changed their format from "4.75," to "$4.75 ," 
-
-* New 2005 zones and rates, setup DataTools
-
-* Remove requirement for Cache::FileCache, but put it as an optional installation
-  in the documentation for users of Online modules, if they want to use the 
-  cache feature.
-
+    * Remove requirement for Cache::FileCache, but put it as an optional installation
+      in the documentation for users of Online modules, if they want to use the 
+      cache feature.
+      - It is required for Tracking and Tracking::*
+  
     * [Enh] Enhance the CPAN distro
-      - Test::Distribution - this module does it all. See below
-      - Test::Prereq - tests that your prerequisites are in order.
-      - Test::Pod - looks for errors in pod files.
+      - Test::Distribution - Various tests
       - Test::Signature - makes sure your SIGNATURE file is cryptographically valid.
-
-    * [Enh] Prepare for 2005 Updates
-    
-Atlanta-based United Parcel Services (UPS) said it is increasing both package shipping rates and its fuel surcharge structure effective January 3, 2005.
-    
-The carrier said rates for UPS Ground, UPS Next Day Air, UPS 2nd Day Air, UPS 3 Day Select and U.S. international services will increase 2.9%. UPS Hundredweight Service – what it considers an “alternative” to LTL service – will increase by 5.9%.
-
-Also beginning in January, UPS will reduce the fuel surcharge currently applied to UPS Next Day Air, UPS 2nd Day Air and UPS 3 Day Select and international services by setting a maximum cap of 9.5%. This surcharge will continue to be calculated from an index based on the average price for a gallon of kerosene-type jet fuel.
-
-However, a fuel surcharge of 2% on UPS Ground, UPS Ground Hundredweight and UPS Standard To Canada will be applied that will fluctuate after January based on the Department of Energy’s on-highway diesel price.
-
-Other pricing changes include an increase of $0.25 for the delivery area surcharge on both residential and commercial services to more remote ZIP codes. The residential surcharge will increase $0.10 for UPS Ground services and $0.35 for UPS Next Day Air, UPS 2nd Day Air and UPS 3 Day Select. 
+      - Module::Signature
 
     * [Bug] New 'Ground Residential' service name doesn't work for UPS_Offline:
       Error: Zone 'u' lookup failed, type 'Ground Residential' not found
@@ -50,6 +22,8 @@ Other pricing changes include an increase of $0.25 for the delivery area surchar
       - It tries to build and install Business::Shipping before anything else,
         when that should be the last module that it installs.  If CPAN is set 
         to install modules that are listed in the makefile, then it will proceed
+        correctly, but is there some way to specify the order so it doesn't have
+        to?
         
     * [Bug] On a clean 5.8.5, trying to install Bundle::Business::Shipping::UPS_Offline
       results in:
@@ -61,7 +35,7 @@ Other pricing changes include an increase of $0.25 for the delivery area surchar
         t/21_preload tries to load Cache::FileCache.
         (because of Business::Shipping::Tracking, perhaps?)
      
-    * [Enh] Move main documentation into 'Business::Shipping::Manual'
+    * [Enh] Move main documentation into 'Business::Shipping::Manual'?
     
     * [Enh] Allow a "Company" name to be placed in the results.  So that the user
       sees "UPS" instead of "UPS_Online".
@@ -237,6 +211,9 @@ Other pricing changes include an increase of $0.25 for the delivery area surchar
 ################################################################################
 ##  USPS_Online TODO
 ################################################################################
+    
+    * [Enh] New 'All' domestic service type returns all rates with one call.
+      - See new docs
 
     * [Bug] USPS_Online EMS bug reported by Micah Gersten <micah@davka.com>
       > It is using the 'Economy (Surface) Parcel Post' rate instead of 'Global 
